# helix-from-zero

./: .gitignore  .pmat-metrics.toml  Cargo.toml  Makefile  README.md  clippy.toml  deny.toml  helix.toml
.github/workflows/: ci.yml
contracts/: helix-rust-v1.yaml
crates/helix-client/: Cargo.toml
crates/helix-client/examples/: list_top_films.rs
crates/helix-client/src/: client.rs  contracts.rs  error.rs  lib.rs  types.rs
db/: queries.hx  schema.hx
